Reindeer theme update: new window style "light".
Other fixes to progress indicator and datefield styles.

svn changeset:8008 branch:6.0

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -723,15 +723,11 @@ div.v-app-loading {
 }
 .v-progressindicator-wrapper {
 	overflow: hidden; /* for IE6 */
-	height: 9px;
+	height: 7px;
 	border: 1px solid #ddd;
 }
-.v-progressindicator-disabled {
-	height: 9px;
-	overflow: hidden; /* for IE6 */
-}
 .v-progressindicator-indicator {
-	height: 9px;
+	height: 7px;
 	overflow: hidden; /* for IE6 */
 	background: #ddd;
 }
@@ -1441,7 +1437,7 @@ div.v-tree-node-leaf {
 	font-weight: bold;
 }
 /* A more specific selector to make sure padding isn't so easily overridden */
-div.v-window-header {
+.div.v-window-header {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	-ms-text-overflow: ellipsis;
@@ -1466,27 +1462,19 @@ div.v-window-header {
 .v-window-footer {
 	overflow: hidden;
 	zoom: 1;
+	height: 10px;
+	position: relative;
 }
 .v-window-resizebox {
-	display: inline; /* fix IE6 double float margin bug */
-	float: right;
 	width: 10px;
 	height: 10px;
 	cursor: se-resize;
 	background: #ddd;
 	overflow: hidden;
-}
-/* IE7 fails with the float:right */
-.v-ie7 .v-window-footer {
-	position: relative;
-	height: 10px;
-}
-.v-ie7 .v-window-resizebox {
 	position: absolute;
-	float: none;
 	right: 0;
 }
-.v-ie7 .v-window-footer-noresize {
+.v-window div.v-window-footer-noresize {
 	height: 0;
 }
 .v-window-resizebox-disabled {
