--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -723,15 +723,11 @@ div.v-app-loading {
 }
 .v-progressindicator-wrapper {
 	overflow: hidden; /* for IE6 */
-	height: 9px;
+	height: 7px;
 	border: 1px solid #ddd;
 }
-.v-progressindicator-disabled {
-	height: 9px;
-	overflow: hidden; /* for IE6 */
-}
 .v-progressindicator-indicator {
-	height: 9px;
+	height: 7px;
 	overflow: hidden; /* for IE6 */
 	background: #ddd;
 }
@@ -1441,7 +1437,7 @@ div.v-tree-node-leaf {
 	font-weight: bold;
 }
 /* A more specific selector to make sure padding isn't so easily overridden */
-div.v-window-header {
+.div.v-window-header {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	-ms-text-overflow: ellipsis;
@@ -1466,27 +1462,19 @@ div.v-window-header {
 .v-window-footer {
 	overflow: hidden;
 	zoom: 1;
+	height: 10px;
+	position: relative;
 }
 .v-window-resizebox {
-	display: inline; /* fix IE6 double float margin bug */
-	float: right;
 	width: 10px;
 	height: 10px;
 	cursor: se-resize;
 	background: #ddd;
 	overflow: hidden;
-}
-/* IE7 fails with the float:right */
-.v-ie7 .v-window-footer {
-	position: relative;
-	height: 10px;
-}
-.v-ie7 .v-window-resizebox {
 	position: absolute;
-	float: none;
 	right: 0;
 }
-.v-ie7 .v-window-footer-noresize {
+.v-window div.v-window-footer-noresize {
 	height: 0;
 }
 .v-window-resizebox-disabled {
@@ -2341,6 +2329,10 @@ span.v-datefield-calendarpanel-month {
 .v-ff2 .v-datefield-full {
 	min-width: 254px;
 }
+.v-datefield-popupcalendar,
+.v-ff2 .v-datefield-popupcalendar {
+	min-width: 0;
+}
 .v-datefield-year .v-datefield-calendarpanel {
 	width: 100px;
 }
@@ -2898,15 +2890,12 @@ td.v-datefield-calendarpanel-nextyear {
 }
 
 /* ./WebContent/VAADIN/themes/reindeer/progressindicator/progressindicator.css */
-.v-progressindicator {
-	background: #dfe2e4 url(progressindicator/img/base.gif) repeat-x 0 1px;
-}
 .v-progressindicator-wrapper {
+	background: #dfe2e4 url(progressindicator/img/base.gif) repeat-x;
 	border: 1px solid #bfbfbf;
 }
-.v-progressindicator-disabled {
-	background: #dfe2e4 url(progressindicator/img/disabled.gif);
-	border: 1px solid #bfbfbf;
+.v-disabled .v-progressindicator-wrapper {
+	background-image: url(progressindicator/img/disabled.gif);
 }
 .v-progressindicator-indicator {
 	background: #f7f9f9 url(progressindicator/img/progress.png);
@@ -3858,20 +3847,30 @@ input.v-textfield-readonly,
 .v-window-wrap {
 	border: 1px solid #808386;
 }
-/* IE6 needs border on the outer element */
-.v-ie6 .v-window {
-	border: 1px solid #808386;
-}
-.v-ie6 .v-window-wrap {
-	border: none;
-}
 .v-sa .v-window-wrap,
 .v-ff3 .v-window-wrap,
 .v-op .v-window-wrap {
 	border-color: rgba(0,0,0,.2);
 }
-.v-ff2 .v-window-wrap {
+.v-ff2 .v-window-wrap,
+.v-ie6 .v-window-wrap {
 	border: none;
+}
+.v-ff2 .v-window-outerheader,
+.v-ie6 .v-window-outerheader {
+	border: 1px solid #808386;
+	border-bottom: none;
+}
+.v-ff2 .v-window-contents,
+.v-ie6 .v-window-contents {
+	border: 1px solid #808386;
+	border-top: none;
+	border-bottom: none;
+}
+.v-ff2 .v-window-footer,
+.v-ie6 .v-window-footer {
+	border: 1px solid #808386;
+	border-top: none;
 }
 .v-window-outerheader {
 	padding: 12px 32px 0 14px;
@@ -3888,6 +3887,13 @@ input.v-textfield-readonly,
 	color: #fff;
 	text-shadow: #000 0 -1px 0;
 }
+.v-window-error .v-window-header {
+	padding-left: 13px;
+	background: transparent url(common/icons/error.png) no-repeat 0 50%;
+}
+.v-ie6 .v-window-error .v-window-header {
+	background-image: url(common/icons/error-ie6.png);
+}
 .v-window-resizebox {
 	width: 15px;
 	height: 15px;
@@ -3902,12 +3908,7 @@ input.v-textfield-readonly,
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
   background-position: left -1359px;
-}
-.v-ie7 .v-window-footer {
 	height: 15px;
-}
-.v-ie7 .v-window-footer-noresize {
-	height: 0;
 }
 .v-window-closebox {
 	top: 12px;
@@ -3940,8 +3941,71 @@ input.v-textfield-readonly,
 
 
 
+
 /**
- Black window -----------------------------
+ Light style window -----------------------------
+**/
+
+.v-window-light .v-window-outerheader {
+	background: transparent;
+	padding: 15px 32px 0 18px;
+	height: 23px;
+}
+.v-window-light .v-window-header {
+	font-size: 16px;
+	color: #292e34;
+	text-shadow: none;
+}
+.v-window-light .v-window-resizebox {
+	width: 12px;
+	height: 12px;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1422px;
+}
+.v-window-light .v-window-footer {
+	background: transparent;
+	height: 12px;
+}
+.v-window-light .v-window-closebox {
+	right: 1px;
+	top: 17px;
+	width: 19px;
+	height: 15px;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1434px;
+}
+.v-window-light .v-window-closebox:hover {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1449px;
+}
+.v-window-light .v-window-closebox:active {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1464px;
+}
+.v-window-light .v-window-contents {
+	background: transparent;
+}
+/* This must be the last sprite added to the verticals-sprite image */
+.v-window-light .v-window-wrap2 {
+	background: #f7f7f8 repeat-x;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1479px;
+}
+.v-ie6 .v-window-light .v-window-wrap2 {
+	background-image: none;
+}
+
+
+
+
+
+/**
+ Black style window -----------------------------
 **/
 
 .v-window-black .v-window-wrap {
@@ -3959,6 +4023,7 @@ input.v-textfield-readonly,
 .v-window-black .v-window-wrap2 {
 	background-color: #0b0e0f;
 	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
 }
 .v-sa .v-window-black .v-window-wrap2,
 .v-ff3 .v-window-black .v-window-wrap2,
@@ -3967,16 +4032,8 @@ input.v-textfield-readonly,
 }
 .v-window-black .v-window-outerheader {
 	height: auto;
-	padding: 0;
-	background: transparent;
-}
-.v-window-black .v-window-header {
-	height: auto;
-	padding: 7px 0 7px 0;
+	padding: 7px 14px;
 	height: 15px;
-	font-size: 12px;
-	font-weight: normal;
-	color: #dddfe1;
 	background: transparent repeat-x;
   background-image: url(common/img/black-vertical-sprites.png);
   -background-image: url(common/img/black-vertical-sprites-ie6.png);
@@ -3984,12 +4041,23 @@ input.v-textfield-readonly,
 	text-align: center;
 	-moz-border-radius-topright: 8px;
 	-moz-border-radius-topleft: 8px;
+	-webkit-border-top-right-radius: 8px;
+	-webkit-border-top-left-radius: 8px;
+	overflow: hidden;
+	border: none;
+}
+.v-window-black .v-window-header {
+	font-size: 12px;
+	font-weight: normal;
+	color: #dddfe1;
 }
 .v-window-black .v-window-closebox {
 	top: 8px;
 }
 .v-window-black .v-window-footer {
 	background: transparent;
+	border: none;
+	height: 14px;
 }
 .v-window-black .v-window-resizebox {
 	background: transparent no-repeat;
@@ -4007,9 +4075,9 @@ input.v-textfield-readonly,
 .v-ie6 .v-window-black .v-window-contents {
 	background: transparent url(window/img/black/content-bg-ie6.png) repeat-x;
 }
-
 /* Must be last to make this image last in the sprites */
 .v-window-black .v-window-contents {
+	border: none;
 	background: transparent repeat-x;
   background-image: url(common/img/black-vertical-sprites.png);
   -background-image: url(common/img/black-vertical-sprites-ie6.png);
