--- a/WebContent/VAADIN/themes/runo/progressindicator/progressindicator.css
+++ b/WebContent/VAADIN/themes/runo/progressindicator/progressindicator.css
@@ -1,12 +1,12 @@
-.v-progressindicator {
-	background: #dfe2e4 url(img/base.gif) repeat-x 0 1px;
-}
 .v-progressindicator-wrapper {
+	background: #dfe2e4 url(img/base.gif) repeat-x;
 	border: 1px solid #b6bbbc;
 }
-.v-progressindicator-disabled {
-	background: #dfe2e4 url(img/disabled.gif);
-	border: 1px solid #b6bbbc;
+.v-disabled .v-progressindicator-wrapper {
+	background-image: url(img/disabled.gif);
+}
+.v-progressindicator-indicator {
+	background: #f7f9f9 url(img/progress.png);
 }
 .v-progressindicator-indicator {
 	background: #f7f9f9 url(img/progress.png);
