--- a/WebContent/VAADIN/themes/reindeer/button/button.css
+++ b/WebContent/VAADIN/themes/reindeer/button/button.css
@@ -79,6 +79,10 @@ div > .v-button.v-disabled .v-button-caption,
 	margin-top: -1px;
 	margin-left: -1px;
 }
+.v-op .v-button:active .v-icon + .v-button-caption,
+.v-op .v-button:active .v-icon + .v-errorindicator + .v-button-caption {
+	margin-left: -26px;
+}
 /* Modifications for buttons with icons */
 div > .v-button .v-icon,
 .v-ie7 .v-button .v-icon,
