Tabsheet "framed" style added to Reindeer theme.
Minor fixes to combobox, textfield and panel.

svn changeset:8027 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/panel/panel.css
+++ b/WebContent/VAADIN/themes/reindeer/panel/panel.css
@@ -16,11 +16,15 @@
 	border: 1px solid #dcdcdc;
 	border-bottom: none;
 	border-top: none;
-	background: #fff;
 }
 .v-sa .v-panel-content,
 .v-ff3 .v-panel-content {
 	border-color: rgba(0,0,0,.1);
+}
+.v-panel-content > div,
+.v-ie6 .v-panel-content {
+	background: #fff;
+	min-height: 100%;
 }
 .v-panel-deco {
 	height: 1px;
