Small fixes to panel and tabsheet styles on blue background.
Reverted one fix from combobox, now works better in IE also.

Committed missing menubar image.

svn changeset:8029 branch:6.0

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -825,7 +825,7 @@ div.v-progressindicator-indeterminate-disabled {
 	border: 1px solid #eee;
 }
 .v-filterselect-suggestmenu table {
-	border-spacing: 0;
+	border-collapse: collapse;
 	border: none;
 }
 .v-filterselect-suggestmenu .gwt-MenuItem {
