--- a/WebContent/VAADIN/themes/base/select/select.css
+++ b/WebContent/VAADIN/themes/base/select/select.css
@@ -68,7 +68,7 @@
 	border: 1px solid #eee;
 }
 .v-filterselect-suggestmenu table {
-	border-spacing: 0;
+	border-collapse: collapse;
 	border: none;
 }
 .v-filterselect-suggestmenu .gwt-MenuItem {
