--- a/WebContent/VAADIN/themes/reindeer/tabsheet/tabsheet.css
+++ b/WebContent/VAADIN/themes/reindeer/tabsheet/tabsheet.css
@@ -173,6 +173,11 @@
 	border: 1px solid #dcdcdc;
 	border-bottom: none;
 	border-top: none;
+	color: #222;
+	text-shadow: none;
+}
+.blue .v-tabsheet-content-framed {
+	border-color: #a8bcc5;
 }
 .v-tabsheet-content-framed .v-tabsheet-tabsheetpanel {
 	background: #fff;
@@ -186,6 +191,10 @@
 	border-top: 1px solid #bebebe;
 	background: #e2e2e2;
 	overflow: hidden;
+}
+.blue .v-tabsheet-deco-framed {
+	border-color: #92a3ac;
+	background: #adc2cd;
 }
 .v-sa .v-tabsheet-deco-framed,
 .v-ff3 .v-tabsheet-deco-framed {
